make christian dr

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -314,13 +314,13 @@
   website: https://pudo.org
   github: pudo
 
-- name: Christian Heise
+- name: Dr. Christian Heise
   img: christianheise
   staff: 0
   board: 1
   advisory: 0
   position: Vorsitzender
-  bio: "Christian Heise ist Vorsitzender der Open Knowledge Foundation Deutschland. Er ist Politologe und hat zum Thema Open Science am Centre for Digital Cultures an der Leuphana Universität Lüneburg promoviert. Derzeit ist er Mitglied des Google Digital News Initiative (DNI) Fund Teams. Zuvor war er als Manager bei der Deutschen Presse Agentur und bei ZEIT ONLINE tätig. Neben seiner ehrenamtlichen Tätigkeit im Vorstand der Open Knowledge Foundation ist er auch Gründungs- und Vorstandsmitglied im Förderverein für freie Netzwerke e.V. (freifunk.net)."
+  bio: "Dr. Christian Heise ist Vorsitzender der Open Knowledge Foundation Deutschland. Er ist Politologe und hat zum Thema Open Science am Centre for Digital Cultures an der Leuphana Universität Lüneburg promoviert. Derzeit ist er Mitglied des Google Digital News Initiative (DNI) Fund Teams. Zuvor war er als Manager bei der Deutschen Presse Agentur und bei ZEIT ONLINE tätig. Neben seiner ehrenamtlichen Tätigkeit im Vorstand der Open Knowledge Foundation ist er auch Gründungs- und Vorstandsmitglied im Förderverein für freie Netzwerke e.V. (freifunk.net)."
   bio_en: "Christian Heise is Manager of the Google Digital News Initiative Innovation Fund in Europe, working on stimulating innovation in the digital news ecosystem and demonstrating new thinking in the practice of digital journalism. He is also PhD Candidate at the Centre for Digital Cultures at Leuphana University Lüneburg, where he has handed in a PhD on Open Science. Previously, he was a manager at Deutsche Presse Agentur and worked at ZEIT ONLINE. Apart from his voluntary engagement in the board of OKF DE he is also founding and board member at Förderverein für Freie Netzwerke e.V. (freifunk.net)."
   mail: christian.heise@okfn.de
   twitter: christianheise
