--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -3,7 +3,7 @@ navig:
   Projekte: Projekte
   Blog: Blog
   Services: Services
-  Spenden: Spenden
+  Spenden: Unterstützen
   Mehr: Mehr
   Team: Team
   Vorstand: Vorstand
@@ -16,7 +16,7 @@ titles:
   Impressum: Impressum
   Tags: Tags im Blog
   Jobs: Stellenangebote & Praktika
-  Spenden: Spenden
+  Spenden: Unterstützen
 themen:
   Themen: Themen
   Mehr: mehr erfahren
@@ -82,7 +82,7 @@ start:
     Unsere Arbeit ist unabhängig, überparteilich, interdisziplinär und nicht-kommerziell. Fast alle unserer Projekte leben vom ehrenamtlichen Engagement ihrer Unterstützer. Doch auch ehrenamtliches Engagement kostet Geld.
     Deshalb freuen wir uns über jede Spende, damit wir den Menschen, die sich unter dem Dach der Open Knowledge Foundation Deutschland für freies Wissen, offene Daten und Beteiligung einsetzen, weiterhin eine gute
     Infrastruktur bieten können. Gern nehmen wir auch projektbezogene Sachspenden an!
-  SpendenJa: Find ich gut. Da will ich spenden.
+  SpendenJa: Die OKF unterstützen
   SpendenNein: Stop. Erstmal mehr erfahren.
   Newsletter: Newsletter
   NewsletterText: >
