--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -5,7 +5,7 @@ navig:
   Projekte: Projects
   Blog: Blog
   Services: Services
-  Spenden: Donate
+  Spenden: Support
   Mehr: More
   Team: Team
   Vorstand: Board
@@ -78,11 +78,11 @@ start:
     The Open Knowledge Foundation Germany is a nonprofit organization that advocates open knowledge, open data, transparency, and civil participation.
   Willkommen: >
     Learn more about our <a href="/en/verein/">organisation</a>, our <a href="/en/mission/">goals</a>, and our <a href="/en/projekte/">projects</a>.
-  Spenden: Donations
+  Spenden: Support us
   SpendenText: >
     The Open Knowledge Foundation is an independent, unbiased, interdisciplinary, and nonprofit organization. Almost all of our projects are run by volunteers.
     Therefore, we welcome any donation that allows us to provide support and a good infrastructure to the people working for the Open Knowledge Foundation Germany. We also accept donations for specific projects.
-  SpendenJa: Sounds good. I want to support OKF DE!
+  SpendenJa: Support the OKF
   SpendenNein: Hold on. Tell me more first.
   Newsletter: Newsletter
   NewsletterText: >
