Adjust donation copy in DE/EN

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -77,9 +77,9 @@ start:
     der sich für offenes Wissen, offene Daten, Transparenz und Beteiligung einsetzt.
   Willkommen: >
     Hier kannst du mehr über unsere <a href="/verein/">Organisation</a>, unsere <a href="/mission/">Ziele</a> und unsere <a href="/projekte/">Projekte</a> erfahren.
-  Spenden: Spenden
+  Spenden: Unsere Arbeit ist
   SpendenText: >
-    Unsere Arbeit ist unabhängig, überparteilich, interdisziplinär und nicht-kommerziell. Fast alle unserer Projekte leben vom ehrenamtlichen Engagement ihrer Unterstützer. Doch auch ehrenamtliches Engagement kostet Geld.
+    Unsere Arbeit ist unabhängig, überparteilich, interdisziplinär und nicht-kommerziell. Fast alle unserer Projekte leben vom ehrenamtlichen Engagement ihrer Unterstützer. Doch auch ehrenamtliches Engagement kostet Geld.<br/>
     Deshalb freuen wir uns über jede Spende, damit wir den Menschen, die sich unter dem Dach der Open Knowledge Foundation Deutschland für freies Wissen, offene Daten und Beteiligung einsetzen, weiterhin eine gute
     Infrastruktur bieten können. Gern nehmen wir auch projektbezogene Sachspenden an!
   SpendenJa: Die OKF unterstützen
