--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -78,7 +78,7 @@ start:
     The Open Knowledge Foundation Germany is a nonprofit organization that advocates open knowledge, open data, transparency, and civil participation.
   Willkommen: >
     Learn more about our <a href="/en/verein/">organisation</a>, our <a href="/en/mission/">goals</a>, and our <a href="/en/projekte/">projects</a>.
-  Spenden: Support us
+  Spenden: Our work is
   SpendenText: >
     The Open Knowledge Foundation is an independent, nonpartisan, interdisciplinary, and nonprofit organization. Almost all of our projects are run by volunteers.
     Therefore, we welcome any donation that allows us to provide support and a good infrastructure to the people working for the Open Knowledge Foundation Germany. We also accept donations for specific projects.
