--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -79,9 +79,7 @@ start:
     Hier kannst du mehr über unsere <a href="/verein/">Organisation</a>, unsere <a href="/mission/">Ziele</a> und unsere <a href="/projekte/">Projekte</a> erfahren.
   Spenden: Unsere Arbeit ist
   SpendenText: >
-    Unsere Arbeit ist unabhängig, überparteilich, interdisziplinär und nicht-kommerziell. Fast alle unserer Projekte leben vom ehrenamtlichen Engagement ihrer Unterstützer. Doch auch ehrenamtliches Engagement kostet Geld.<br/>
-    Deshalb freuen wir uns über jede Spende, damit wir den Menschen, die sich unter dem Dach der Open Knowledge Foundation Deutschland für freies Wissen, offene Daten und Beteiligung einsetzen, weiterhin eine gute
-    Infrastruktur bieten können. Gern nehmen wir auch projektbezogene Sachspenden an!
+    Bitte spenden Sie uns, damit wir uns weiterhin effektiv für freies Wissen, offene Daten und Beteiligung einsetzen können.
   SpendenJa: Die OKF unterstützen
   SpendenNein: Stop. Erstmal mehr erfahren.
   Newsletter: Newsletter
