--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -3,7 +3,7 @@ navig:
   Projekte: Projekte
   Blog: Blog
   Services: Services
-  Spenden: Unterstützen
+  Spenden: Spenden
   Mehr: Mehr
   Team: Team
   Vorstand: Vorstand
