--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -80,7 +80,7 @@ start:
   Spenden: Unsere Arbeit ist
   SpendenText: >
     Bitte spenden Sie uns, damit wir uns weiterhin effektiv für freies Wissen, offene Daten und Beteiligung einsetzen können.
-  SpendenJa: Die OKF unterstützen
+  SpendenJa: Jetzt spenden!
   SpendenNein: Stop. Erstmal mehr erfahren.
   Newsletter: Newsletter
   NewsletterText: >
