--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -4,7 +4,7 @@
   board: 1
   advisory: 0
   position:
-  bio: "Kristina ist seit 2017 im Vortand der Open Knowledge Foundation Deutschland. Davor war sie drei Jahre lang Geschäftsführerin der Organisation. Sie war bei der UNHCR in Myanmar für den Bereich Donor Relations zuständig und hat als Senior Program Manager der Carnegie Endowment for International Peace das Brüsseler Büro stellvertretend geleitet sowie als Programm- und Konferenz-Manager den Bereich Internationale Politik der Körber Stiftung begleitet. Weitere berufliche Stationen waren der Danish Refugee Council in Myanmar und das Wall Street Journal Europe in Berlin."
+  bio: "Kristina ist seit 2017 im Vorstand der Open Knowledge Foundation Deutschland. Davor war sie drei Jahre lang Geschäftsführerin der Organisation. Sie war bei der UNHCR in Myanmar für den Bereich Donor Relations zuständig und hat als Senior Program Manager der Carnegie Endowment for International Peace das Brüsseler Büro stellvertretend geleitet sowie als Programm- und Konferenz-Manager den Bereich Internationale Politik der Körber Stiftung begleitet. Weitere berufliche Stationen waren der Danish Refugee Council in Myanmar und das Wall Street Journal Europe in Berlin."
   bio_en: "Kristina is member of the board since 2017. She was Chief Executive Officer of the organization in the prior three years. Previously, she worked as Peace Building Fund Coordinator with UNHCR in Myanmar. Kristina was the deputy lead of the Brussels office of Carnegie Endowment for International Peace, and part of the International Relations team of Körber Foundation. She has furthermore worked with the Danish Refugee Council in Myanmar and the Wall Street Journal Europe in Berlin."
   mail: kristina.klein@okfn.de
   twitter:
