--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -748,4 +748,17 @@
   twitter: stadine
   website:
 
+- name: Lea Pfau
+  img: leapfau
+  staff: 1
+  board: 0
+  advisory: 0
+  position:
+  bio: "Lea ist seit September 2017 bei der OKF und unterstützt als studentische Mitarbeiterin die Demokratielabore. Sie studiert Politikwissenschaften an der FU Berlin und beschäftigt sich außerdem im Rahmen des Europäischen Jugendparlaments mit politischer Jugendbildung im Zusammenhang mit Medien. "
+  bio_en: "Lea has been working for the OKF since September 2017 in the project Demokratielabore. She studies Political Science at the FU Berlin and, working with the European Youth Parliament, explores the significance of media in policial youth education. "
+  mail: "lea.pfau@okfn.de"
+  twitter: 
+  website:
+
+
 
