update english bio adriana

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -103,7 +103,7 @@
   advisory: 0
   position:
   bio: "Adriana ist Teil des Prototype Fund-Teams und kümmert sich um das Program Management. Zuvor hat sie Politikwissenschaft und European Public Policy and Administration in Frankfurt am Main und Maastricht studiert. Sie interessiert sich sehr für demokratische Innovationen und die Frage, wie Partizipation und gesellschaftlicher Austausch besser funktionieren könnten. 2016 hat Adriana das Projekt wepublic gestartet, das digitale Kommunikation zwischen Bürgern und Politikern verbessern soll."
-  bio_en: "Adriana is part of the Prototype Fund teams und responsible for program management. She studied Political Science and European Public Policy in Frankfurt and Maastricht."
+  bio_en: "Adriana is part of the Prototype Fund Team and responsible for the program management. Previously, Adriana studied Political Science and European Public Policy and Governance in Frankfurt am Main and in Maastricht. She is interested in how digital tools can improve democratic participation and communication. In 2016, Adriana started the project wepublic that aims connect societal and political interests."
   mail: adriana.groh@okfn.de
   twitter:
   website:
