--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -718,8 +718,8 @@
   board: 0
   advisory: 0
   position:
-  bio: "Saadya arbeitet seit Januar 2017 bei der OKF und ist aktuell als Projektmanagerin bei den Demokratielaboren."
-  bio_en: "Saadya has been working for the Open Knowledge Foundation since January 2017 and is a projekt manager at the Dmokratielabore."
+  bio: "Saadya arbeitet seit Januar 2017 bei der OKF und ist aktuell als Projektmanagerin bei 2030Watch."
+  bio_en: "Saadya has been working for the Open Knowledge Foundation since January 2017 and is a projekt manager at the 2030Watch."
   mail: saadya.windauer@okfn.de
   twitter:
   website:
