--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -92,7 +92,7 @@
   position:
   bio: "Lydia unterstützt das Team der Demokratielabore im Bereich des Projektmanagements politische Jugendbildung. Sie hat Erziehungs- und Bildungswissenschaft an der Freien Universität Berlin studiert und ist schnell in die Bildungsarbeit im Bereich der Jugendbeteiligung eingetaucht. Die Begleitung und Unterstützung von jugendlichen Freiwilligen im Programm des Freiwilligen Jahres Beteiligung sowie für den Landesjugendring Berlin e.V. haben sie einige Jahre beschäftigt und begeistert. Nebenbei gründete sie mit anderen Freiberufler_innen zusammen das stuhlkreis_revolte Kollektiv, ein Kollektiv für emanzipatorische Bildungsarbeit und Prozessbegleitung. Neben der Arbeit in den Demokratielaboren ist sie weiterhin freiberuflich tätig und immer auf der Suche nach neuen Herausforderungen."
   bio_en: "Lydia unterstützt das Team der Demokratielabore im Bereich des Projektmanagements politische Jugendbildung. Sie hat Erziehungs- und Bildungswissenschaft an der Freien Universität Berlin studiert und ist schnell in die Bildungsarbeit im Bereich der Jugendbeteiligung eingetaucht. Die Begleitung und Unterstützung von jugendlichen Freiwilligen im Programm des Freiwilligen Jahres Beteiligung sowie für den Landesjugendring Berlin e.V. haben sie einige Jahre beschäftigt und begeistert. Nebenbei gründete sie mit anderen Freiberufler_innen zusammen das stuhlkreis_revolte Kollektiv, ein Kollektiv für emanzipatorische Bildungsarbeit und Prozessbegleitung. Neben der Arbeit in den Demokratielaboren ist sie weiterhin freiberuflich tätig und immer auf der Suche nach neuen Herausforderungen."
-  mail: lydia.boettchern@okfn.de
+  mail: lydia.boettcher@okfn.de
   twitter:
   website:
   github: lydiaboe
