--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -216,8 +216,8 @@
   board: 0
   advisory: 0
   position:
-  bio: "Michael arbeitet seit Oktober 2016 als Data Scientist im Bereich Finanztransparenz bei der Open Knowledge Foundation. Er hat Volkswirtschaft mit einem Fokus auf Finanzwissenschaft studiert und arbeitet in den Projekten: Subsidystories.eu, OpenBudgets.eu und OffenerHaushalt.de. Außerdem koordiniert er den zivilgesellschaftlichen Arbeitskreis zur Open Government Partnership in Deutschland, welcher sich für offeneres, transparenteres und partizipativeres Regierungshandeln einsetzt."
-  bio_en: "Michael works as a Data Analyst in the field of Open Government mostly focused on financial transparency. He holds a Masters in Public Economics and advocates for more transparent public finances. Additionally, he coordinates the civil society working group of the Open Government Partnership, which aims towards making the German government more open, accountable, and responsive to citizens."
+  bio: "Michael arbeitet seit Oktober 2016 als Datenanalyst bei der Open Knowledge Foundation im Bereich Finanztransparenz. Er hat Volkswirtschaft mit einem Fokus auf Finanzwissenschaft studiert und betreut insbesondere das Projekt OffenerHaushalt.de. Zudem koordiniert er den zivilgesellschaftliche Open Government Netzwerk, welches sich für offenes Regierungs- und Verwaltungshandeln im Rahmen der deutschen Teilnahme an der Open Government Partnership."
+  bio_en: "Michael works as a Data Analyst in the field of Open Government mostly focused on financial transparency. He holds a Masters in Public Economics and advocates for more transparent public finances. Additionally, he coordinates the Open Government Netzwerk, the German civil society network, which advocates making the German government more open, accountable, and responsive to citizens."
   mail: michael.peters@okfn.de
   twitter: miguelitoj89
   github: michaeljokf
