make elisa ptf project lead

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -191,8 +191,8 @@
   board: 0
   advisory: 0
   position:
-  bio: "Elisa unterstützt das Codefor-Team im Projekt „Digital Refugee Labs“. Studiert hat sie Prähistorische Archäologie, war aber schnell in IT-Projekte im kulturellen Bereich involviert. Nebenbei betreut sie archäologische Forschungsprojekte im Sudan von technischer Seite und wirkt am Forschungszentrum für Kultur und Informatik an der HTW Berlin mit."
-  bio_en: "Elisa supports the Codefor team in the project 'Digital Refugee Labs'. After studying Prehistory, she soon got involved with IT projects in the cultural sector. Apart from working for OKF DE, she supports archaeological research projects in Sudan technically and takes part in the Research Center for Culture and Computer Science at the University of Applied Sciences Berlin."
+  bio: "Elisa ist Projektleiterin des Prototype Funds. Studiert hat sie Prähistorische Archäologie, war aber schnell in IT-Projekte im kulturellen Bereich involviert. Nebenbei betreut sie archäologische Forschungsprojekte im Sudan von technischer Seite und wirkt am Forschungszentrum für Kultur und Informatik an der HTW Berlin mit."
+  bio_en: "Elisa ist project lead of the Prototype Fund. After studying Prehistory, she soon got involved with IT projects in the cultural sector. Apart from working for OKF DE, she supports archaeological research projects in Sudan technically and takes part in the Research Center for Culture and Computer Science at the University of Applied Sciences Berlin."
   mail: elisa.lindinger@okfn.de
   twitter: elizab0t
   website:
@@ -732,8 +732,8 @@
   board: 0
   advisory: 0
   position:
-  bio: "Lea unterstützt die OKF seit September 2017 im Rahmen ihres Freiwilligendienstes beim FJ Beteiligung und arbeitet aktuell bei Jugend hackt und Frag den Staat mit."
-  bio_en: "Lea has been working for the Open Knowledge Foundation since September 2017 and joined the projects Jugend hackt and Frag den Staat."
+  bio: "Lea unterstützt die OKF seit September 2017 im Rahmen ihres Freiwilligendienstes beim FJ Beteiligung und arbeitet aktuell bei Jugend hackt und FragDenStaat mit."
+  bio_en: "Lea has been working for the Open Knowledge Foundation since September 2017 and joined the projects Jugend hackt and FragDenStaat."
   mail: lea.schubert@okfn.de
   twitter:
   website:
