change eingetragen to gemeinnütig

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -89,7 +89,7 @@ start:
   AusUnseremBlog: Aus unserem Blog
 footer:
   license: >
-    Open Knowledge Foundation Deutschland e.V. ist ein eingetragener Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite sind, sofern nicht anders angegeben,
+    Open Knowledge Foundation Deutschland e.V. ist ein gemeinnütziger Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite sind, sofern nicht anders angegeben,
     nach <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a> lizensiert.
 impressum:
   Adresse: Vereinsadresse
