team profile update

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -153,10 +153,10 @@
   board: 0
   advisory: 0
   position:
-  bio: "Bela setzt sich zusammen mit Anna bei [OpenBudgets](https://okfn.de/projekte/openbudgets/) für mehr Transparenz und Rechenschaft im Bereich der Haushaltsgestaltung in Europa ein. Er ist spezialisiert auf Öffentlichkeitsarbeit, Kommunikation und Designaufgaben. Er hat einen Master in „European Studies on Society, Science & Technology“ und arbeitet seit November 2014 bei der Open Knowledge Foundation."
-  bio_en: "Bela works alongside Anna to bring more transparency to budget data in Europe with [OpenBudgets](https://okfn.de/projekte/openbudgets/). He specializes in public relations, communication, and graphic design and compiles the monthly OKF newsletter. He holds a degree in European Studies on Society, Science and Technology and joined OKF DE in 2014."
+  bio: "Bela ist Projektleiter von DatenmachenSchule und dem Turing-Bus. Er ist spezialisiert auf Öffentlichkeitsarbeit, Kommunikation und Designaufgaben. Er hat einen Master in „European Studies on Society, Science & Technology“ und arbeitet seit November 2014 bei der Open Knowledge Foundation."
+  bio_en: "Bela project lead of DatenmachenSchule and the Turing-Bus. He specializes in public relations, communication, and graphic design and compiles the monthly OKF newsletter. He holds a degree in European Studies on Society, Science and Technology and joined OKF DE in 2014."
   mail: bela.seeger@okfn.de
-  twitter: belaseeger
+  twitter: bela_data
   website:
 
 - name: Fiona Krakenbürger
