--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -149,7 +149,7 @@
   twitter:
   website:
 
-- name: Paula Glaser
+- name: Paula Grünwald (geb. Glaser)
   img: paulaglaser
   staff: 1
   board: 0
@@ -157,7 +157,7 @@
   position:
   bio: "Paula organisiert zusammen mit Maria Jugend hackt. Über die Veranstaltung hat sie auch ihre Masterarbeit im Studiengang „Medien in der Bildung“ an der PH Freiburg geschrieben. Davor hat sie u.a. für das Fraunhofer Institut gearbeitet und Dokumentarfilme gedreht. Offene Daten findet Paula super, weil sie zu aktiver demokratischer Partizipation einladen."
   bio_en: "Paula organises Jugend hackt together with Maria. The project was part of her master thesis on Media and Education at the PH Freiburg. Previously, she worked for the Fraunhofer Institute and has filmed documentaries. Paula finds Open Data interesting and important because it stimulates active democratic participation."
-  mail: paula.glaser@okfn.de
+  mail: paula.gruenwald@okfn.de
   twitter: rinhia
   website:
 
